<resources>
    <string name="app_name">바름</string>

    <!--no internet-->
    <string name="no_internet">인터넷이 연결되지 않았습니다.\nNo Internet Connection.</string>

    <!--login & signup-->
    <string name="service_name">바름</string>

    <!--login & signup-->
    <string name="login_landing">Speak Korean.\nPlay the Game.\nMaster It.</string>
    <string name="login_ruready">Ready to level up\nyour Korean?</string>
    <string name="login_tocontinue">Sign up with Social of fill the form to continue.</string>
    <string name="signup_letsstart">Let\'s Get Started!</string>
    <string name="signup_alreadyuse">*This email is already in use</string>
    <string name="signup_pwcheck">At least 8 characters, 1 uppercase letter, 1 number, 1 symbol</string>
    <string name="signup_privacy">By Signing up, you agree to the Terms of Service and Privacy Policy</string>
    <string name="signup_writevalid">*Write valid email address (email@domain.com)</string>
    <string name="signup_codenotvalid">Code is not correct!</string>
    <string name="login_email_error">Your email address has not been registered.</string>
    <string name="login_password_error">Passwords do not match.</string>

    <!--home-->
    <string name="home_title">%s님의 학습기록</string>
    <string name="home_subtitle_eng">%s\'s Learning Journey</string>
    <string name="home_not_give_up">포기하지 않는 %s님!</string>
    <string name="home_continue_study">지금까지 총 %d번 학습했어요! 오늘도 이어서 해볼까요?</string>
    <string name="home_quiz_1">내가 푼 퀴즈</string>
    <string name="home_quiz_2">오늘의 푼 퀴즈</string>
    <string name="home_conversation">회화 연습 횟수</string>

    <string name="home_go_to_study">공부하러가기</string>
    <string name="home_go_to_study_eng">Today\'s Learning Games</string>
    <string name="home_study_title">AI 튜터와\n한국어 실전 연습</string>
    <string name="home_go_to_example">연습하러가기</string>

    <!--ai practice-->
    <string name="ai_practice_title">AI 한국어 실전연습</string>
    <string name="ai_practice_title_eng">Today\'s Learning Objectives</string>
    <string name="ai_practice_show_previous_practice">이전 연습 보기</string>
    <string name="ai_practice_daily">필수/일상</string>
    <string name="ai_practice_culture">문화/여가</string>
    <string name="ai_practice_job">취업/업무</string>

    <string name="practice_record_title">나의 연습 기록</string>
    <string name="practice_record_title_eng">My Practice Records</string>

    <!--ai chat-->
    <string name="ai_chat_essential">필수</string>
    <string name="ai_chat_listening">Listening .. ..</string>

    <!--game tab-->
    <string name="game_tab_title">한국어 퀴즈</string>
    <string name="game_tab_subtitle">오늘도 열심히 공부해볼까요?</string>
    <string name="game_tab_week_mon">월</string>
    <string name="game_tab_week_tue">화</string>
    <string name="game_tab_week_wed">수</string>
    <string name="game_tab_week_thu">목</string>
    <string name="game_tab_week_fri">금</string>
    <string name="game_tab_week_sat">토</string>
    <string name="game_tab_week_sun">일</string>

    <string name="game_quiz_num">문제 %d</string>
    <string name="game_quiz_picture">그림에 맞는 단어를 선택해주세요!</string>
    <string name="game_quiz_voice">음성을 듣고 해당하는 단어의 \n뜻을 선택해주세요.</string>
    <string name="game_quiz_complete">확인</string>
    <string name="game_quiz_correct">정답입니다!</string>
    <string name="game_quiz_skip_actually">사실 정답은...</string>
    <string name="game_quiz_incorrect">아쉽습니다</string>
    <string name="game_quiz_success">정답이에요!</string>
    <string name="game_quiz_fail">오답이에요!</string>
    <string name="game_quiz_success_next">다음으로</string>
    <string name="game_quiz_fail_next">다시 도전</string>
    <string name="game_quiz_skip">정답 보고 건너뛰기</string>

    <string name="game_quiz_again">다시하기</string>
    <string name="game_quiz_stop">그만하기</string>
    <string name="game_quiz_finalsucess">도전성공</string>
    <string name="game_quiz_finalfail">도전실패</string>
    <string name="game_quiz_commentsuccess">멋지네요!\n다음 퀴즈도 풀어볼까요?</string>
    <string name="game_quiz_commentafail">멈추지 말고\n다시 해봐요!!</string>

    <!--explore-->
    <string name="explore_title">마감 기한이 코앞으로 다가왔어요!</string>
    <string name="explore_enroll">신청하기</string>
    <string name="explore_all_title">전체 프로그램</string>
    <string name="explore_price_free">무료</string>
    <string name="explore_price_paid">유료</string>

    <!--community-->
    <string name="community_search">검색어를 입력하세요</string>
    <string name="community_all">전체</string>
    <string name="community_following">팔로잉</string>
    <string name="community_follow">팔로우</string>
    <string name="community_user_country">사용자 국가</string>
    <string name="community_id">\@%s</string>
    <string name="community_time"> · %s</string>
    <string name="post_write">작성</string>
    <string name="post_write_complete">완료</string>
    <string name="post_write_hint">내용을 적어주세요</string>
    <string name="post_detail_image_count">%d / %d</string>

    <!--profile-->
    <string name="other_profile_post">게시물</string>
    <string name="other_profile_follower">팔로워</string>
    <string name="other_profile_following">팔로잉</string>
    <string name="other_profile_share">프로필 공유</string>
    <string name="my_profile_edit">프로필 편집</string>

    <string name="follow_list_following">팔로잉</string>
    <string name="follow_list_follower">팔로워</string>

    <string name="my_quit_ask">서비스 이름을\n탈퇴하시나요?</string>
    <string name="my_quit_comment">탈퇴하시는 이유를 알려주세요</string>
    <string name="my_quit_reason1">자주 사용하지 않아서</string>
    <string name="my_quit_reason2">가격이 비싸서</string>
    <string name="my_quit_reason3">앱 오류가 많아서</string>
    <string name="my_quit_reason4">유사 어플 사용 예정</string>
    <string name="my_quit_reason5">직접입력</string>
    <string name="my_quit_here">사유를 입력해주세요.</string>
    <string name="my_quit_done">선택완료</string>

    <string name="my_quit_askagain">정말 탈퇴하시겠어요?</string>
    <string name="my_quit_commentagain">탈퇴 버튼 선택시, 계정은\n삭제되며 복구되지 않습니다.</string>
    <string name="my_quit_decide">탈퇴</string>
    <string name="my_quit_cancel">취소</string>

    <!--mock-->
    <string name="practice_record_item_title">은행 업무에 대한 대화</string>
    <string name="practice_record_item_summation">예적금 방법과 은행 방문 목적에 관해 이야기 함</string>
    <string name="practice_record_item_date">2025.04.08</string>
    <string name="practice_record_item_type">일상</string>

    <string name="chat_me_item_content1">Hi team 🖐️</string>
    <string name="chat_me_item_content2">Anyone on for lunch today</string>
    <string name="chat_ai_item_name">Jav</string>
    <string name="chat_ai_item_content1">I\'m down! Any ideas??</string>
    <string name="chat_ai_item_content2">Let me know</string>
    <string name="chat_item_date">11:31 AM</string>

    <string name="community_content_mock"></string>

    <string name="other_profile_country_mock">일본</string>
</resources>