<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_previous_practice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_arrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_practice_record_arrow"
        android:layout_marginEnd="10dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.08"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/iv_background"/>

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_record_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/practice_record_item_title"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/btn_arrow"
        app:layout_constraintTop_toTopOf="@id/iv_background"
        app:layout_constraintStart_toStartOf="@id/iv_background"/>

    <TextView
        android:id="@+id/tv_summation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/practice_record_item_summation"
        android:layout_marginTop="-3dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/practice_record_item_date"
        android:textColor="@color/practice_record_item_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_summation"
        app:layout_constraintStart_toStartOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/type_practice_record"
        android:text="@string/practice_record_item_type"
        android:textColor="@color/practice_record_item_dark_green"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="@id/tv_date"/>

    <View
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/cl_chat_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_chat_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toStartOf="@id/btn_arrow"
        app:layout_constraintTop_toBottomOf="@id/tv_type"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_chat_my"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>